menu section first section done

--- a/edgeCut/index.html
+++ b/edgeCut/index.html
@@ -34,12 +34,38 @@
 
 
         <!-- main division starts -->
-        <div class="grid bg-[#f9fafa] mt-[14px] leading-[40px] px-[26px]">
-            <div class="grid uppercase text-[32px] font-bold mt-[18%]">
+        <div class="grid justify-center items-center bg-[#f9fafa] mt-[14px] leading-[40px] px-[26px]">
+
+            <!-- heading tag -->
+            <div class="grid justify-start  w-full items-center uppercase text-[32px] font-bold mt-[18%]">
                 <span class="text-start">for all your</span>
                 <span>furniture</span>
                 <span>needs</span>
             </div>
+            <!-- heading over -->
+
+            <!-- child heading starts -->
+            <div class="grid justify-center items-center py-[26px]">
+                <div class="grid justify-start text-start  w-full items-center">
+                    <span class="text-start leading-[25px]">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores sabdsaa
+                        perspiciatis,
+                        illo maxime voluptatem a itaque suscipit.
+                    </span>
+                </div>
+            </div>
+            <!-- child heading ends -->
+
+            <!-- main buttons starts -->
+            <div class="grid  items-center w-full space-y-3 ">
+                <div class="flex justify-center  items-center   text-white">
+                    <button class="bg-[#f89646] flex justify-center transition duration-[0.3s] items-center h-[46px] w-full hover:bg-white hover:text-[#f89646] hover:border-[1px] hover:border-[#f89646]">Contact Us</button>
+                </div>
+                <div class="flex justify-center  items-center  text-white">
+                    <button class="bg-[#6bb7be] flex justify-center transition duration-[0.3s] items-center h-[46px] w-full hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">About Us</button>
+                </div>
+            </div>
+            <!-- main buttons ends -->
         </div>
         <!-- main division over -->
 
