--- a/edgeCut/index.html
+++ b/edgeCut/index.html
@@ -34,7 +34,7 @@
 
 
         <!-- main division starts -->
-        <div class="grid justify-center items-center bg-[#f9fafa] mt-[14px] leading-[40px] px-[26px]">
+        <div class="grid justify-center items-center bg-[#f9fafa] mt-[14px] leading-[40px] px-[26px] pb-[20px]">
 
             <!-- heading tag -->
             <div class="grid justify-start  w-full items-center uppercase text-[32px] font-bold mt-[18%]">
@@ -59,16 +59,169 @@
             <!-- main buttons starts -->
             <div class="grid  items-center w-full space-y-3 ">
                 <div class="flex justify-center  items-center   text-white">
-                    <button class="bg-[#f89646] flex justify-center transition duration-[0.3s] items-center h-[46px] w-full hover:bg-white hover:text-[#f89646] hover:border-[1px] hover:border-[#f89646]">Contact Us</button>
+                    <button
+                        class="bg-[#f89646] flex justify-center transition duration-[0.3s] items-center h-[46px] w-full hover:bg-white hover:text-[#f89646] hover:border-[1px] hover:border-[#f89646]">Contact
+                        Us</button>
                 </div>
                 <div class="flex justify-center  items-center  text-white">
-                    <button class="bg-[#6bb7be] flex justify-center transition duration-[0.3s] items-center h-[46px] w-full hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">About Us</button>
+                    <button
+                        class="bg-[#6bb7be] flex justify-center transition duration-[0.3s] items-center h-[46px] w-full hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">About
+                        Us</button>
                 </div>
             </div>
             <!-- main buttons ends -->
+
+            <!-- image div starts -->
+            <div class="grid justify-center items-center py-[50px]">
+                <div class="flex justify-center items-center">
+                    <img src="./assets/images/menu_img.png" alt="">
+                </div>
+            </div>
+            <!-- image div ends -->
         </div>
         <!-- main division over -->
 
+
+        <!-- our furniture section starts -->
+        <div class="grid py-[50px]">
+            <div class="grid justify-start items-center">
+                <h2 class="uppercase font-bold text-[32px]">our furniture</h1>
+            </div>
+            <div class="flex justify-start  pt-[10px] items-center">
+                <span>
+                    which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you
+                    need to be sure there isn't an
+                </span>
+            </div>
+        </div>
+        <!-- our furniture section ends -->
+
+
+        <!-- selling section starts -->
+        <div class="grid">
+            <div class="grid space-y-[46px] items-center">
+                <!-- 1st -->
+                <div class="grid justify-center items-center  bg-[#f9fafa] ">
+                    <div class="flex justify-center px-[45px]  py-[45px]">
+                        <img src="./assets/images/f1.png" class="pt-[10px]" alt="">
+                    </div>
+                    <div class="grid px-[24px] pb-[20px] uppercase space-y-[5px]">
+                        <div class="grid justify-start items-center  text-[18px]">
+                            <span>brown chair design</span>
+                        </div>
+                        <div class="flex justify-between items-center  text-[16px] ">
+                            <div class="flex justify-center items-center">
+                                <span class="text-[#6bb7be] pr-[5px]">$ </span>
+                                <span>100.00</span>
+                            </div>
+                            <div class="flex justify-center items-center ">
+                                <button class="text-[#6bb7be] uppercase">Buy now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 2nd -->
+                <div class="grid justify-center items-center  bg-[#f9fafa] ">
+                    <div class="flex justify-center px-[45px]  py-[45px]">
+                        <img src="./assets/images/f2.png" class="pt-[10px]" alt="">
+                    </div>
+                    <div class="grid px-[24px] pb-[20px] uppercase space-y-[5px]">
+                        <div class="grid justify-start items-center  text-[18px]">
+                            <span>double bed design</span>
+                        </div>
+                        <div class="flex justify-between items-center  text-[16px] ">
+                            <div class="flex justify-center items-center">
+                                <span class="text-[#6bb7be] pr-[5px]">$ </span>
+                                <span>200.00</span>
+                            </div>
+                            <div class="flex justify-center items-center ">
+                                <button class="text-[#6bb7be] uppercase">Buy now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 3rd -->
+                <div class="grid justify-center items-center  bg-[#f9fafa] ">
+                    <div class="flex justify-center px-[45px]  py-[45px]">
+                        <img src="./assets/images/f3.png" class="pt-[10px]" alt="">
+                    </div>
+                    <div class="grid px-[24px] pb-[20px] uppercase space-y-[5px]">
+                        <div class="grid justify-start items-center  text-[18px]">
+                            <span>house chair design</span>
+                        </div>
+                        <div class="flex justify-between items-center  text-[16px] ">
+                            <div class="flex justify-center items-center">
+                                <span class="text-[#6bb7be] pr-[5px]">$ </span>
+                                <span>200.00</span>
+                            </div>
+                            <div class="flex justify-center items-center ">
+                                <button class="text-[#6bb7be] uppercase">Buy now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 4th -->
+                <div class="grid justify-center items-center  bg-[#f9fafa] ">
+                    <div class="flex justify-center px-[45px]  py-[45px]">
+                        <img src="./assets/images/f4.png" class="pt-[10px]" alt="">
+                    </div>
+                    <div class="grid px-[24px] pb-[20px] uppercase space-y-[5px]">
+                        <div class="grid justify-start items-center  text-[18px]">
+                            <span>brown table design</span>
+                        </div>
+                        <div class="flex justify-between items-center  text-[16px] ">
+                            <div class="flex justify-center items-center">
+                                <span class="text-[#6bb7be] pr-[5px]">$ </span>
+                                <span>100.00</span>
+                            </div>
+                            <div class="flex justify-center items-center ">
+                                <button class="text-[#6bb7be] uppercase">Buy now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 5th -->
+                <div class="grid justify-center items-center  bg-[#f9fafa] ">
+                    <div class="flex justify-center px-[45px]  py-[45px]">
+                        <img src="./assets/images/f5.png" class="pt-[10px]" alt="">
+                    </div>
+                    <div class="grid px-[24px] pb-[20px] uppercase space-y-[5px]">
+                        <div class="grid justify-start items-center  text-[18px]">
+                            <span>blue chair design</span>
+                        </div>
+                        <div class="flex justify-between items-center  text-[16px] ">
+                            <div class="flex justify-center items-center">
+                                <span class="text-[#6bb7be] pr-[5px]">$ </span>
+                                <span>200.00</span>
+                            </div>
+                            <div class="flex justify-center items-center ">
+                                <button class="text-[#6bb7be] uppercase">Buy now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid justify-center items-center  bg-[#f9fafa] ">
+                    <div class="flex justify-center px-[45px]  py-[45px]">
+                        <img src="./assets/images/f6.png" class="pt-[10px]" alt="">
+                    </div>
+                    <div class="grid px-[24px] pb-[20px] uppercase space-y-[5px]">
+                        <div class="grid justify-start items-center  text-[18px]">
+                            <span>brown table design</span>
+                        </div>
+                        <div class="flex justify-between items-center  text-[16px] ">
+                            <div class="flex justify-center items-center">
+                                <span class="text-[#6bb7be] pr-[5px]">$ </span>
+                                <span>200.00</span>
+                            </div>
+                            <div class="flex justify-center items-center ">
+                                <button class="text-[#6bb7be] uppercase">Buy now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- selling section ends -->
 
     </div>
 
