about section done

--- a/edgeCut/index.html
+++ b/edgeCut/index.html
@@ -223,6 +223,31 @@
         </div>
         <!-- selling section ends -->
 
+        <!-- about us section starts -->
+        <div class="grid mt-[30px]">
+            <div class="grid bg-[#f9fafa] w-full items-center space-y-[18px] py-[80px]  px-[26px]">
+                <div class="flex justify-center items-center ">
+                    <img src="./assets/images/menu_img.png" alt="menu_imagea">
+                </div>
+                <div class="flex text-[32px] font-bold pt-[22px] uppercase justify-start items-start">
+                    <span>about us</span>
+                </div>
+                <div class="flex justify-start items-center">
+                    <span class="text-[16px]">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorem eum consequuntur ipsam
+                        repellat dolor soluta aliquid laborum, eius odit consectetur vel quasi in quidem, eveniet ab est
+                        corporis tempore.
+                    </span>
+                </div>
+                <div class="flex justify-start items-center pt-[20px]">
+                    <button
+                        class="bg-[#6bb7be] flex text-white justify-center transition duration-[0.3s] items-center h-[46px] w-[146px] hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">Read
+                        More</button>
+                </div>
+            </div>
+        </div>
+        <!-- about us section starts -->
+
     </div>
 
 
