photos for blogs added

--- a/edgeCut/index.html
+++ b/edgeCut/index.html
@@ -248,6 +248,79 @@
         </div>
         <!-- about us section starts -->
 
+        <!-- latest blog section starts -->
+        <div class="grid">
+            <div class="flex justify-center items-center text-[32px] uppercase font-bold pt-[80px] pb-[45px]">
+                <span>latest blog</span>
+            </div>
+            <div class="grid space-y-[60px]">
+                <!-- 1st blog -->
+                <div class="grid justify-center items-center shadow-md">
+                    <div class="flexjustify-center  items-center">
+                        <img src="./assets/images/b1.jpg" alt="" class="w-full">
+                    </div>
+                    <div class="grid justify-center  text-start items-center   px-[26px]">
+                        <span class="leading-[24px] font-bold text-[20px] pt-[28px]">
+                            Look even slightly believable. If you are
+                        </span>
+                        <span class="pt-[8px] text-[15px]">
+                            alteration in some form, by injected humour, or randomised words which don't look even
+                            slightly
+                            believable.
+                        </span>
+                        <div class="flex justify-start items-center py-[20px]">
+                            <button
+                                class="bg-[#6bb7be] flex text-white justify-center transition duration-[0.3s] items-center h-[46px] w-[146px] hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">Read
+                                More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- 2nd blog -->
+                <div class="grid justify-center items-center shadow-md">
+                    <div class="flexjustify-center  items-center">
+                        <img src="./assets/images/b2.jpg" alt="" class="w-full">
+                    </div>
+                    <div class="grid justify-center  text-start items-center   px-[26px]">
+                        <span class="leading-[24px] font-bold text-[20px] pt-[28px]">
+                            Anything embarrassing hidden in the middle
+                        </span>
+                        <span class="pt-[8px] text-[15px]">
+                            alteration in some form, by injected humour, or randomised words which don't look even
+                            slightly
+                            believable.
+                        </span>
+                        <div class="flex justify-start items-center py-[20px]">
+                            <button
+                                class="bg-[#6bb7be] flex text-white justify-center transition duration-[0.3s] items-center h-[46px] w-[146px] hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">Read
+                                More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- 3rd blog -->
+                <div class="grid justify-center items-center shadow-md">
+                    <div class="flexjustify-center  items-center">
+                        <img src="./assets/images/b3.jpg" alt="" class="w-full">
+                    </div>
+                    <div class="grid justify-center  text-start items-center   px-[26px]">
+                        <span class="leading-[24px] font-bold text-[20px] pt-[28px]">
+                            Molestias magni natus dolores odio commodi. Quaerat!
+                        </span>
+                        <span class="pt-[8px] text-[15px]">
+                            alteration in some form, by injected humour, or randomised words which don't look even
+                            slightly
+                            believable.
+                        </span>
+                        <div class="flex justify-start items-center py-[20px]">
+                            <button
+                                class="bg-[#6bb7be] flex text-white justify-center transition duration-[0.3s] items-center h-[46px] w-[146px] hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">Read
+                                More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- latest blog section ends -->
+
     </div>
 
 
