maps added in contact us

--- a/edgeCut/index.html
+++ b/edgeCut/index.html
@@ -14,6 +14,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
 
 
@@ -276,7 +277,7 @@
                 </div>
                 <!-- 2nd blog -->
                 <div class="grid justify-center items-center shadow-md">
-                    <div class="flexjustify-center  items-center">
+                    <div class="flex justify-center  items-center">
                         <img src="./assets/images/b2.jpg" alt="" class="w-full">
                     </div>
                     <div class="grid justify-center  text-start items-center   px-[26px]">
@@ -382,17 +383,50 @@
                 </div>
             </div>
             <div class="flex  justify-center items-center space-x-2 mt-[30px]">
-                <div class="flex justify-center items-center h-[45px] w-[45px] bg-[#6bb7be] text-white rounded-full left-swipe">
+                <div
+                    class="flex justify-center items-center h-[45px] w-[45px] bg-[#6bb7be] text-white rounded-full left-swipe">
                     <i class="fa-solid fa-arrow-left"></i>
                 </div>
-                <div class="flex justify-center items-center h-[45px] w-[45px] bg-[#6bb7be] text-white rounded-full right-swipe">
+                <div
+                    class="flex justify-center items-center h-[45px] w-[45px] bg-[#6bb7be] text-white rounded-full right-swipe">
                     <i class="fa-solid fa-arrow-right"></i>
                 </div>
             </div>
         </div>
         <!-- testimonial ends -->
 
+
         <!-- contact us start -->
+        <div class="grid mt-[100px]">
+            <div class="grid bg-[#f9fafa] py-[20px] px-[26px]">
+                <div class="flex justify-start items-center uppercase text-[32px] font-bold pt-[50px] pb-[40px]">
+                    <span>contact us</span>
+                </div>
+                <div class="grid space-y-6 ">
+                    <input type="text" class="h-[50px]  placeholder:text-black bg-white pl-[15px]"
+                        placeholder="Your name">
+                    <input type="text" class="h-[50px]  placeholder:text-black bg-white pl-[15px]"
+                        placeholder="Phone Number">
+                    <input type="text" class="h-[50px]  placeholder:text-black bg-white pl-[15px]" placeholder="Email">
+                    <input type="text" class="h-[120px] placeholder:text-black bg-white pl-[15px]"
+                        placeholder="Message">
+                    <div class="flex justify-start items-center">
+                        <button
+                            class="bg-[#6bb7be] flex justify-center text-white transition duration-[0.3s] items-center h-[49.6px] w-[151.9px]  hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">SEND</button>
+                    </div>
+                </div>
+                <div class="grid py-[50px]">
+                    <div class="flex justify-center items-center">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3686.75599290172!2d70.0642901748941!3d22.475801979560742!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39576aa4921548a5%3A0x4a408202ee9ed820!2sNeo%20Square%2C%20Pandit%20Nehru%20Marg%2C%20Indradeep%20Society%2C%20Jamnagar%2C%20Gujarat%20361001!5e0!3m2!1sen!2sin!4v1699004615542!5m2!1sen!2sin"
+                           class="h-[500px] w-full" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- contact us end -->
+
 
     </div>
 
