Footer and credit section added

--- a/edgeCut/index.html
+++ b/edgeCut/index.html
@@ -419,7 +419,7 @@
                     <div class="flex justify-center items-center">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3686.75599290172!2d70.0642901748941!3d22.475801979560742!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39576aa4921548a5%3A0x4a408202ee9ed820!2sNeo%20Square%2C%20Pandit%20Nehru%20Marg%2C%20Indradeep%20Society%2C%20Jamnagar%2C%20Gujarat%20361001!5e0!3m2!1sen!2sin!4v1699004615542!5m2!1sen!2sin"
-                           class="h-[500px] w-full" style="border:0;" allowfullscreen="" loading="lazy"
+                            class="h-[500px] w-full" style="border:0;" allowfullscreen="true" loading="fast"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
@@ -428,8 +428,118 @@
         <!-- contact us end -->
 
 
-    </div>
+        <!-- footer starts -->
+        <div class="grid">
+            <div class="grid justify-center items-center bg-[#191e1f] py-[60px] space-y-6">
+                <div class="grid justify-center text-center items-center text-white  space-y-1">
+                    <span><i class="fa-solid fa-phone fa-xl"></i></span>
+                    <span class="text-[16px]">
+                        Call : +01 123455678990
+                    </span>
+                </div>
+                <div class="grid justify-center text-center items-center text-white  space-y-1">
+                    <span><i class="fa-solid fa-envelope fa-xl"></i></span>
+                    <span class="text-[16px]">
+                        Email : demo@gmail.com
+                    </span>
+                </div>
+                <div class="grid justify-center text-center items-center text-white  space-y-1">
+                    <span><i class="fa-solid fa-location fa-xl"></i></span>
+                    <span class="text-[16px]">
+                        India
+                    </span>
+                </div>
+                <!-- links -->
+                <div class="grid justify-center items-center text-white pt-[30px]">
+                    <div class="grid justify-center items-center">
+                        <span class=" text-[24px]">
+                            QUICK LINKS
+                        </span>
+                    </div>
+                    <div class="grid justify-center text-center items-center pt-[30px]">
+                        <a href="#">Home</a>
+                        <a href="#">About</a>
+                        <a href="#">Furniture</a>
+                        <a href="#">Blog</a>
+                        <a href="#">Contact Us</a>
+                    </div>
+                </div>
+                <!-- instagram feed -->
+                <div class="grid justify-center items-center ">
+                    <div class="grid justify-center items-center text-white py-[12px]">
+                        <span class="text-[20px] uppercase">
+                            Instagram Feeds
+                        </span>
+                    </div>
+                    <div class="grid justify-center items-center grid-cols-3 gap-[10px]">
+                        <div class="grid justify-center items-center w-[65px] h-[65px] bg-white p-2.5">
+                            <img src="./assets/images/f1.png" alt="">
+                        </div>
+                        <div class="grid justify-center items-center w-[65px] h-[65px] bg-white p-2.5">
+                            <img src="./assets/images/f2.png" alt="">
+                        </div>
+                        <div class="grid justify-center items-center w-[65px] h-[65px] bg-white p-2.5">
+                            <img src="./assets/images/f3.png" alt="">
+                        </div>
+                        <div class="grid justify-center items-center w-[65px] h-[65px] bg-white p-2.5">
+                            <img src="./assets/images/f4.png" alt="">
+                        </div>
+                        <div class="grid justify-center items-center w-[65px] h-[65px] bg-white p-2.5">
+                            <img src="./assets/images/f5.png" alt="">
+                        </div>
+                        <div class="grid justify-center items-center w-[65px] h-[65px] bg-white p-2.5">
+                            <img src="./assets/images/f6.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <!-- news letter -->
+                <div class="grid justify-center items-center pb-[20px]">
+                    <div class="grid justify-center items-center text-center text-white py-[12px]">
+                        <span class="text-[24px] px-[26px]">
+                            SIGN UP TO OUR NEWSLETTER
+                        </span>
+                    </div>
+                    <div class="grid px-[34px]  items-center">
+                        <input type="text" placeholder="Enter Your Email"
+                            class="bg-[##eaeaea] h-[45px] placeholder:pl-[10px]">
+                    </div>
+                    <div class="flex justify-center  items-center  text-white pt-[14px]">
+                        <button
+                            class="bg-[#6bb7be] flex justify-center transition duration-[0.3s] items-center h-[46px] w-[170px] hover:bg-[#191e1f] hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">Subscribe</button>
+                    </div>
+                    <div class="flex justify-center items-center space-x-4 pt-[26px]">
+                        <div
+                            class="flex justify-center items-center h-[45px] w-[45px] border-[1px] border-[#6bb7be] text-[#6bb7be] rounded-md hover:text-[#f89646] hover:border-[#f89646]">
+                            <span><i class="fa-brands fa-facebook-f "></i></span>
+                        </div>
+                        <div
+                            class="flex justify-center items-center h-[45px] w-[45px] border-[1px] border-[#6bb7be] text-[#6bb7be] rounded-md hover:text-[#f89646] hover:border-[#f89646]">
+                            <span><i class="fa-brands fa-twitter "></i></span>
+                        </div>
+                        <div
+                            class="flex justify-center items-center h-[45px] w-[45px] border-[1px] border-[#6bb7be] text-[#6bb7be] rounded-md hover:text-[#f89646] hover:border-[#f89646]">
+                            <span><i class="fa-brands fa-linkedin "></i></span>
+                        </div>
+                        <div
+                            class="flex justify-center items-center h-[45px] w-[45px] border-[1px] border-[#6bb7be] text-[#6bb7be] rounded-md hover:text-[#f89646] hover:border-[#f89646]">
+                            <span><i class="fa-brands fa-instagram "></i></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- footer ends -->
 
+        <!-- disclaimer section starts -->
+        <div class="flex items-center py-[22px]">
+            <div class="flex text-center">
+                <span> © 2023 All Rights Reserved By
+                    Free Html Templates Distribution TempMarket
+                </span>
+            </div>
+        </div>
+        <!-- disclaimer section ends -->
+    </div>
     <!-- swiper js cdn link -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./assets/js/script.js"></script>
