--- a/edgeCut/index.html
+++ b/edgeCut/index.html
@@ -18,18 +18,29 @@
 <body>
 
 
-    <div class="grid p-[10px] px-[16px] sm:px-[36px]">
+    <div class="grid p-[10px] px-[16px] sm:px-[36px] md:px-[46px]">
         <!-- navigation menu -->
         <div class="flex justify-between items-center ">
             <div class="flex justify-center items-center uppercase font-bold text-[24px]">edgecut</div>
-            <div class="grid space-y-[6px] justify-center items-center">
+            <div class="flex">
+                <div
+                    class="flex justify-between items-center space-x-12 pr-[30px] uppercase text-[16px] hidden lg:block">
+                    <a href="">Home</a>
+                    <a href="">about</a>
+                    <a href="">Furniture</a>
+                    <a href="">Blog</a>
+                    <a href="">Contact US</a>
+                    <a href="">Login <span><i class="fa-solid fa-user"></i></span></a>
+                    <a href=""><span><i class="fa-solid fa-search"></i></span></a>
+                </div>
+            </div>
+            <div class="grid space-y-[6px] justify-center items-center lg:hidden">
                 <span class="h-[4px] bg-black w-[34px] rounded-full"></span>
                 <span class="h-[4px] bg-black w-[34px] rounded-full"></span>
                 <span class="h-[4px] bg-black w-[34px] rounded-full"></span>
             </div>
         </div>
         <!-- navigation menu over -->
-
 
         <!-- main division starts -->
         <div
@@ -106,7 +117,7 @@
         <!-- selling section starts -->
         <div class="grid">
             <div class="grid space-y-[46px] items-center ">
-                <div class="grid sm:grid-cols-2 sm:gap-8 sm:gap-y-[50px]">
+                <div class="grid sm:grid-cols-2 sm:gap-8 sm:gap-y-[50px] lg:grid-cols-3">
                     <!-- 1st -->
                     <div class="grid justify-center items-center  bg-[#f9fafa] ">
                         <div class="flex justify-center px-[45px]  py-[45px] sm:px-[50px] sm:py-[50px]">
@@ -268,7 +279,7 @@
             <div class="flex justify-center items-center text-[32px] uppercase font-bold pt-[80px] pb-[45px]">
                 <span>latest blog</span>
             </div>
-            <div class="grid space-y-[60px] sm:grid-cols-2 sm:space-y-0 sm:gap-8 sm:gap-y-[50px]">
+            <div class="grid space-y-[60px] sm:grid-cols-2 sm:space-y-0 sm:gap-8 sm:gap-y-[50px] lg:grid-cols-3">
                 <!-- 1st blog -->
                 <div class="grid justify-center items-center shadow-md">
                     <div class="flexjustify-center  items-center">
@@ -276,7 +287,7 @@
                     </div>
                     <div class="grid justify-center  text-start items-center   px-[26px]">
                         <span class="leading-[24px] font-bold text-[20px] pt-[28px]">
-                            Look even slightly believable. If you are
+                            Look even slightly believable. If you are true lover
                         </span>
                         <span class="pt-[8px] text-[15px]">
                             alteration in some form, by injected humour, or randomised words which don't look even
@@ -341,58 +352,51 @@
             <div class="flex justify-center items-center uppercase text-[32px] font-bold pt-[80px] pb-[40px]">
                 <span>testimonial</span>
             </div>
-            <div class="swiper mySwiper sm:px-[50px]">
-                <div class="swiper-wrapper ">
-                    <div class="swiper-slide grid justify-center items-center place-items-center  shadow-2xl">
-                        <div
-                            class="h-[175px] w-[175px]  overflow-hidden border-[10px] rounded-full border-[#6bb7be] my-[36px]">
-                            <img src="./assets/images/client.jpg" alt="">
+            <div class="swiper mySwiper sm:px-[50px] ">
+                <div class="swiper-wrapper lg:h-[200px] ">
+                    <div
+                        class="swiper-slide grid justify-center items-center place-items-center shadow-2xl lg:flex lg:px-[20px] ">
+                        <div class="">
+                            <div
+                                class="h-[175px] w-[175px]  overflow-hidden border-[10px] rounded-full border-[#6bb7be] my-[36px] ">
+                                <img src="./assets/images/client.jpg" alt="">
+                            </div>
                         </div>
-                        <div class="flex justify-center items-center ">
-                            <span class="h-[16px] w-[16px]"><i class="fa-solid fa-quote-left"></i></span>
-                        </div>
-                        <div class="flex justify-center items-center px-[26px] text-[16px] pt-[14px] pb-[40px]">
-                            <span>
-                                It is a long established fact that a reader will be
-                                distracted by the readable cIt is a long established fact
-                                that a reader will be distracted by the readable c
-                            </span>
+                        <div class="grid lg:justify-start lg:w-[400px]">
+                            <div
+                                class="flex justify-center items-center lg:justify-start lg:pl-[50px]  lg:justify-start ">
+                                <span class="h-[16px] w-[16px]"><i class="fa-solid fa-quote-left"></i></span>
+                            </div>
+                            <div class="flex justify-center items-center px-[26px] text-[16px] pt-[14px] pb-[40px]">
+                                <span>
+                                    It is a long established fact that a reader will be
+                                    distracted by the readable cIt is a long established fact
+                                    that a reader will be distracted by the readable c
+                                </span>
+                            </div>
                         </div>
                     </div>
                     <!-- 2nd -->
-
-                    <div class="swiper-slide grid justify-center items-center place-items-center shadow-2xl">
-                        <div
-                            class="h-[175px] w-[175px] bg-red-300 overflow-hidden border-[10px] rounded-full border-[#6bb7be] my-[36px]">
-                            <img src="./assets/images/client.jpg" alt="">
+                    <div
+                        class="swiper-slide grid justify-center items-center place-items-center shadow-2xl lg:flex lg:px-[20px] ">
+                        <div class="">
+                            <div
+                                class="h-[175px] w-[175px]  overflow-hidden border-[10px] rounded-full border-[#6bb7be] my-[36px] ">
+                                <img src="./assets/images/client.jpg" alt="">
+                            </div>
                         </div>
-                        <div class="flex justify-center items-center ">
-                            <span class="h-[16px] w-[16px]"><i class="fa-solid fa-quote-left"></i></span>
-                        </div>
-                        <div class="flex justify-center items-center px-[26px] text-[16px] pt-[14px] pb-[40px]">
-                            <span>
-                                It is a long established fact that a reader will be
-                                distracted by the readable cIt is a long established fact
-                                that a reader will be distracted by the readable c
-                            </span>
-                        </div>
-                    </div>
-
-
-                    <div class="swiper-slide grid justify-center items-center place-items-center shadow-2xl">
-                        <div
-                            class="h-[175px] w-[175px] bg-red-300 overflow-hidden border-[10px] rounded-full border-[#6bb7be] my-[36px]">
-                            <img src="./assets/images/client.jpg" alt="">
-                        </div>
-                        <div class="flex justify-center items-center ">
-                            <span class="h-[16px] w-[16px]"><i class="fa-solid fa-quote-left"></i></span>
-                        </div>
-                        <div class="flex justify-center items-center px-[26px] text-[16px] pt-[14px] pb-[40px]">
-                            <span>
-                                It is a long established fact that a reader will be
-                                distracted by the readable cIt is a long established fact
-                                that a reader will be distracted by the readable c
-                            </span>
+                        <div class="grid lg:justify-start lg:w-[400px]">
+                            <div
+                                class="flex justify-center items-center lg:justify-start lg:pl-[50px]  lg:justify-start ">
+                                <span class="h-[16px] w-[16px]"><i class="fa-solid fa-quote-left"></i></span>
+                            </div>
+                            <div class="flex justify-center items-center px-[26px] text-[16px] pt-[14px] pb-[40px]">
+                                <span>
+                                    It is a long established fact that a reader will be
+                                    distracted by the readable cIt is a long established fact
+                                    that a reader will be distracted by the readable c
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -413,7 +417,7 @@
 
         <!-- contact us start -->
         <div class="grid mt-[100px]">
-            <div class="grid bg-[#f9fafa] py-[20px] px-[26px]">
+            <div class="grid bg-[#f9fafa] py-[20px] px-[26px] lg:px-[80px]">
                 <div class="sm:flex sm:space-x-6 sm:py-[80px]">
                     <div class="grid space-y-6 sm:w-[50%] sm:space-y-0">
                         <div
@@ -451,26 +455,30 @@
         <!-- footer starts -->
         <div class="grid">
             <div class="grid justify-center items-center bg-[#191e1f] py-[60px] space-y-6">
-                <div class="grid justify-center text-center items-center text-white  space-y-1">
-                    <span><i class="fa-solid fa-phone fa-xl"></i></span>
-                    <span class="text-[16px]">
-                        Call : +01 123455678990
-                    </span>
+                <div class="grid  lg:w-full lg:flex  lg:justify-between lg:px-[60px] ">
+                    <div class="grid justify-center text-center items-center text-white  space-y-1">
+                        <span><i class="fa-solid fa-phone fa-xl"></i></span>
+                        <span class="text-[16px]">
+                            Call : +01 123455678990
+                        </span>
+                    </div>
+                    <div class="grid justify-center text-center items-center text-white  space-y-1">
+                        <span><i class="fa-solid fa-envelope fa-xl"></i></span>
+                        <span class="text-[16px]">
+                            Email : demo@gmail.com
+                        </span>
+                    </div>
+                    <div class="grid justify-center text-center items-center text-white  space-y-1">
+                        <span><i class="fa-solid fa-location fa-xl"></i></span>
+                        <span class="text-[16px]">
+                            India
+                        </span>
+                    </div>
                 </div>
-                <div class="grid justify-center text-center items-center text-white  space-y-1">
-                    <span><i class="fa-solid fa-envelope fa-xl"></i></span>
-                    <span class="text-[16px]">
-                        Email : demo@gmail.com
-                    </span>
-                </div>
-                <div class="grid justify-center text-center items-center text-white  space-y-1">
-                    <span><i class="fa-solid fa-location fa-xl"></i></span>
-                    <span class="text-[16px]">
-                        India
-                    </span>
-                </div>
+
                 <!-- links -->
-                <div class="grid justify-center items-center text-white pt-[30px] sm:flex sm:p-0 sm:items-start sm:pt-[30px]">
+                <div
+                    class="grid justify-center items-center text-white pt-[30px] sm:flex sm:p-0 sm:items-start sm:pt-[30px]">
                     <div class="sm:w-1/3">
                         <div class="grid justify-center items-center">
                             <span class=" text-[24px] sm:text-center">
